# partial_order_planning_solver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.claude/: CLAUDE.md
pop_solver/: __init__.py  agent.py  app.py  mcp_client.py  mcp_server.py
pop_solver/planning/: planning_solving_functions.py
pop_solver/planning/operator/instances/: robot_painting_operator.py
pop_solver/planning/plan/instances/: robot_painting_plan.py
pop_solver/planning/planner/: planner.py
pop_solver/planning/planner/instances/: blockworld_planner.py  robot_painting_planner.py
pop_solver/planning/state/instances/: robot_painting_state.py
tests/: __init__.py  conftest.py  test_mcp_server.py  test_phase3_integration.py  test_planning_functions.py
